--- a/doarSP/res/values/color.xml
+++ b/doarSP/res/values/color.xml
@@ -7,4 +7,6 @@
     <color name="counter_text_bg">#626262</color>
     <color name="counter_text_color">#c5c4c4</color>
     <color name="edit_text">#fff</color>
+    <color name="pressed_color">#000000</color>
+    <color name="default_color">#ffffff</color>
 </resources>
