--- a/doarSP/res/layout/fragment_novasolicitacao.xml
+++ b/doarSP/res/layout/fragment_novasolicitacao.xml
@@ -6,7 +6,8 @@
     
        <LinearLayout
            android:layout_width="match_parent"
-           android:layout_height="fill_parent" >
+           android:layout_height="fill_parent" 
+           android:background="?android:attr/activatedBackgroundIndicator">
            
            <RelativeLayout
                android:layout_width="match_parent"
@@ -48,7 +49,8 @@
                    android:layout_marginTop="6dp"
                    android:inputType="textPersonName" >
 
-                   <requestFocus />
+                   <requestFocus android:layout_width="match_parent" />
+
                </EditText>
 
                <TextView
@@ -58,13 +60,16 @@
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/SolicitacaoNome"
                    android:text="@string/CadastrarQuantiadDoacao"
+                   android:layout_marginTop="20dp"
                    android:textSize="16sp" />
 
                <Spinner
                    android:id="@+id/SolicitacaoQuantidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
-                   android:layout_below="@+id/SolicitacaoQuantidadeTV"
+                   android:layout_alignTop="@+id/SolicitacaoQuantidadeTV"
+                   android:layout_marginBottom="20dp"
+                   android:layout_toRightOf="@+id/SolicitacaoQuantidadeTV"
                    android:entries="@array/quant_doaco" />
                
                <TextView
@@ -74,32 +79,29 @@
                    android:layout_below="@+id/SolicitacaoQuantidade"
                    android:text="@string/tpSanguineo" />
                
-               <Spinner
-                   android:id="@+id/SolicitacaoTipo"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_below="@+id/SolicitacaoTipoTV"
-                   android:entries="@array/tipos_Sanguineos" />
-               
                <TextView
                    android:id="@+id/SolicitacaoHemocentroTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/SolicitacaoTipo"
-                   android:text="@string/solicitacaohemocentro" />
+                   android:text="@string/solicitacaohemocentro" 
+                   android:layout_marginTop="20dp"/>
                
-               <Spinner
-                   android:id="@+id/SolicitacaoHemocentro"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_below="@+id/SolicitacaoHemocentroTV"
-                   android:entries="@array/tipos_Sanguineos" />
+               <ListView
+					android:id="@+id/SolicitacaoHemocentro"
+					android:layout_width="fill_parent"
+					android:layout_height="250dp"
+					android:layout_marginBottom="20dp"
+					android:layout_marginTop="20dp"
+					android:choiceMode="singleChoice"
+					android:layout_below="@+id/SolicitacaoHemocentroTV" />
                
                <TextView
                    android:id="@+id/SolicitacaoComentarioTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/SolicitacaoHemocentro"
+                   android:layout_marginBottom="20dp"
                    android:text="@string/solicitacaocomentario" />
                
                <EditText
@@ -109,7 +111,6 @@
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/SolicitacaoComentarioTV"
-                   android:layout_marginTop="6dp"
                    android:inputType="textMultiLine" />
 
                <RelativeLayout
@@ -132,6 +133,16 @@
                        android:layout_marginTop="12dp"
                        android:text="@string/salvar" />
                </RelativeLayout>
+
+               <Spinner
+                   android:id="@+id/SolicitacaoTipo"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignLeft="@+id/SolicitacaoQuantidade"
+                   android:layout_alignParentRight="true"
+                   android:layout_alignTop="@+id/SolicitacaoTipoTV"
+                   android:entries="@array/tipos_Sanguineos" />
+
            </RelativeLayout>
        </LinearLayout>
 </ScrollView>	
