--- a/doarSP/res/menu/main.xml
+++ b/doarSP/res/menu/main.xml
@@ -5,5 +5,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/menuAbout"/>
+    
+    <item
+        android:id="@+id/menuSair"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/menuSair"/>
 
 </menu>
