--- a/doarSP/res/layout/fragment_buscardoacoes.xml
+++ b/doarSP/res/layout/fragment_buscardoacoes.xml
@@ -33,7 +33,7 @@
 				</LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/mapa"
+                    android:id="@+id/mapa2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" 
                     android:orientation="vertical">
