--- a/doarSP/res/layout/item_layout_mural.xml
+++ b/doarSP/res/layout/item_layout_mural.xml
@@ -1,47 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
-   	<LinearLayout
-   	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:layout_margin="5dp"
-	    android:background="@android:color/white"
-	    android:orientation="horizontal" >
-	    
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:layout_weight="1"
-	        android:orientation="vertical" >
-	        
-	        <ImageView
-	             android:id="@+id/image_view_mural"
-	             android:layout_width="120dp"
-	             android:layout_height="120dp"
-	             android:adjustViewBounds="true" />
-	        
-        </LinearLayout>
- 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical" >
- 
-            <TextView
-                android:id="@+id/text_view_nome_Comentario"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="32sp" />
- 
-            <TextView
-                android:id="@+id/text_view_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp" />
-        </LinearLayout>
+    android:orientation="vertical"
+    android:padding="20dp" >
+	
+    <LinearLayout
+        android:id="@+id/LLMural"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/ListaMuralNome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:paddingBottom="5dp"
+            android:text="Nome do Paciente"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/ListaMuralTipo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tipo Sanguineo" />
+        
     </LinearLayout>
-</LinearLayout>
+    <TextView
+        android:id="@+id/ListaIdDoacoesMural"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/LLMural"
+        android:text="ID" />
+    
+    <TextView
+        android:id="@+id/ListaMuralComentario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/LLMural"
+        android:text="Comentario" />
+</RelativeLayout>
