--- a/doarSP/res/layout/item_lista_ranking.xml
+++ b/doarSP/res/layout/item_lista_ranking.xml
@@ -29,6 +29,10 @@
             android:text="Quantidade de doações" />
     </LinearLayout>
 
- 
-
+    <ImageView
+        android:id="@+id/ListaMuralImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"/>
 </RelativeLayout>
