--- a/doarSP/res/layout/fragment_lista_doacoes_pendentes.xml
+++ b/doarSP/res/layout/fragment_lista_doacoes_pendentes.xml
@@ -10,6 +10,17 @@
     android:gravity="bottom" >
 
     <TextView
+        android:id="@+id/DoacoesPendentesTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:text="@string/doacoespendentestv"
+        android:textSize="17sp"
+        android:textStyle="bold" />
+    
+    <TextView
         android:id="@+id/BuscarListaDoacoesPendentesTV"
         android:text="@string/buscardoacoespendentestv" 
         android:gravity="center"
