--- a/doarSP/res/layout/fragment_ranking.xml
+++ b/doarSP/res/layout/fragment_ranking.xml
@@ -3,6 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+
+    <TextView
+        android:id="@+id/RankingTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:text="@string/rankingtv"
+        android:textSize="17sp"
+        android:textStyle="bold" />
     
        <ListView
         android:id="@+id/lista_ranking"
